Wed Sep 29 10:11:25 2004  Andreas Kupries <andreask@activestate.com>

	* tree.tcl:        Fixed [Tcllib SF Bug 1034924]. Both tree and graph
	* struct_tree.man: depend on struct::list for some of their methods.
	* tree.test:       Now in the code, documented as well, testsuite
	* graph.tcl:       header code extended.
	* graph.man:
	* graph.test:

2004-09-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* skiplist.tcl: Fixed expr'essions without braces.

	* graph.tcl (CheckSerialization): Fixed nested reuse of foreach
	  variable (attr).

2004-09-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test:  Fixed [Tcllib SF Bug 1007396]. Multiple use
	* graph.tcl:   of the various restrictions is not allowed.
	* graph.man:   Added to code, test suite, and documentation.
	* graph1.test:
	* graph1.tcl:
	* graph1.man:

2004-08-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* stack.tcl: Corrected typo in constructor error message,
	* queue.tcl: due to copying from tree. Found by Michael
	  Schlenker.

2004-08-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_tree.man: Added methods 'ancestors' and 'descendants'.
	* tree.test:
	* tree.tcl:

	* struct_tree.man: Added a prune operation to the tree walk
	* tree.tcl:        command. This implements the [SF Tcllib
	* tree.test:       RFE 916160].

2004-08-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.tcl (::struct::tree::tree, ::struct::tree::_destroy):
	  Better alias for the object command (removed superfluous leading
	  colons).

	* stack.man: Stack, queue; version bumped to 1.3.
	* queue.man: 
	* stack.tcl: 
	* queue.tcl: 
	* pkgIndex.tcl:

	* queue.test:
	* queue.tcl: Changed way of mapping from queue object commands to
	  associoated namespaces. The object namespace now has the same
	  name and location of the object command. Adapted all tests to
	  account for this change.

	* queue.test: