@@ -1,3 +1,8 @@
+Wed Sep 29 12:29:08 2004  Andreas Kupries <andreask@activestate.com>
+
+	* record.tcl (Delete): Fixed [Tcllib SF Bug 1023973]. Do not count
+	* record.test:         the id generator down. Added test case for this.
+
 Wed Sep 29 10:11:25 2004  Andreas Kupries <andreask@activestate.com>
 
 	* tree.tcl:        Fixed [Tcllib SF Bug 1034924]. Both tree and graph
